--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
 </br>
 <ul id="myUL">
-  <li class="checked">Pay bills</li>
-  <li>go to work</li>
+  <li class="checked">Click on this</li>
+  <li>Click on 'x' symbol, delete your task</li>
 </ul>
 <script src="script.js"></script>
   </body>
